--- a/netlify.toml
+++ b/netlify.toml
@@ -1,86 +1,56 @@
+# Netlify configuration file
+
+# Settings for your production environment.
+# These are used when you deploy to your main production branch.
 [build]
-  command = "npm run build"  # Adjust the build command as needed
-  publish = "dist"  # Adjust the publish directory based on your build configuration
+  # Directory for build output, relative to the root of your repository.
+  # This is where Netlify will look for your site content.
+  publish = "dist"     # Change "dist" to your build output folder if it's different
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+  # Your build command.
+  # This is the command that Netlify will run to build your site.
+  command = "npm run build"  # Change this to your actual build command if necessary
 
-[headers]
-  "/*.html" = [
-    "Cache-Control: public, max-age=0, must-revalidate",
-  ]
-
-  "/*.js" = [
-    "Cache-Control: public, max-age=31536000, immutable",
-  ]
-
-  "/*.css" = [
-    "Cache-Control: public, max-age=31536000, immutable",
-  ]
-
-[[headers]]
-  for = "/*.svg"
-    [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/*.jpg"
-    [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/*.jpeg"
-    [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/*.png"
-    [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/*.gif"
-    [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/assets/*"
-    [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-# Add more headers or redirects as needed
-
-# Example redirects for specific pages
+# Redirects
+# Here you define the redirection rules for your site.
 [[redirects]]
   from = "/Ourservices.html"
   to = "/about-us"
   status = 301
+  force = true
 
 [[redirects]]
   from = "/USA.html"
   to = "/study-usa"
   status = 301
+  force = true
 
 [[redirects]]
   from = "/IELTS.html"
   to = "/ielts"
   status = 301
+  force = true
 
 [[redirects]]
   from = "/about.html"
   to = "/services"
   status = 301
+  force = true
 
 [[redirects]]
   from = "/contact.html"
   to = "/contact-us"
   status = 301
+  force = true
 
 [[redirects]]
   from = "/book-consultancy"
   to = "/consultancy"
   status = 301
+  force = true
 
-# More redirects can be added as needed
+[[redirects]]
+  from = "/*"
+  to = "/"
+  status = 301
+  force = true
